--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,10 @@ html, body, .container-fluid {
     height:100%;
 }
 
+.reds{
+  border: 1px solid red;
+}
+
 img.gif {
     width: 100%;
     height: 100%;
@@ -10,16 +14,13 @@ img.gif {
   height: 100%;
 }
 
-.post-meta-data{
-  font-size: 8px;
-}
-
-.thumb-box>img{
-  height: auto;
-}
-
 .article-box>img{
   width: 85%;
+}
+
+.pic{
+  height: 100%;
+  width: 100%;
 }
 
 .slick-initialized.slick-slider,
@@ -28,13 +29,43 @@ img.gif {
   height: 100%;
 }
 
+.post-text-container{
+  /*position: relative;*/
+  height: 100%;
+  line-height: 1px;
+  padding: 10px;
+}
+
+.title-div{
+  padding: 5px;
+}
+.post-title{
+  font-size: 1vw;
+  line-height: 100%;
+}
+
+
 .post{
   height: 90%;
   padding: 10px;
 }
 
+.post-meta-data{
+  font-size: 7px;
+  line-height: 10px;
+  /*position: absolute;*/
+  bottom: 0;
+  padding: 10px 5px;
+  margin: 10px 0px;
+}
+
+.post-meta-data.reds > p{
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+}
+
 .list{
-  height: 90%;
+  height: 270px;
   padding: 10px;
 }
 
@@ -55,7 +86,7 @@ img.gif {
 
 .slick-slide.slick-active{
   border: 2px solid black;
-  height: 200px;
+  height: 250px;
 }
 
 .container.index-container-main{
