--- a/style/style.css
+++ b/style/style.css
@@ -6,12 +6,32 @@ html, body, .container-fluid {
   border: 1px solid red;
 }
 
+.slick-next:before, .slick-prev:before{
+  color: red !important;
+}
 img.gif {
     width: 100%;
     height: 100%;
 }
 .carousel-row{
   height: 100%;
+}
+
+.subRedditBtn{
+  padding: 2px 5px;
+  margin: 3px;
+  border: 1px solid blue;
+  font-size: 14px;
+  color: blue;
+}
+
+.subRedditBtn:hover{
+  padding: 2px 5px;
+  margin: 3px;
+  border: 1px solid blue;
+  font-size: 14px;
+  color: white;
+  background-color: blue
 }
 
 .article-box>img{
@@ -44,10 +64,14 @@ img.gif {
   line-height: 100%;
 }
 
+.loading{
+  border: 1px solid black;
+}
 
 .post{
   height: 90%;
   padding: 10px;
+  text-align: center;
 }
 
 .post-meta-data{
@@ -59,7 +83,7 @@ img.gif {
   margin: 10px 0px;
 }
 
-.post-meta-data.reds > p{
+.post-meta-data > p{
   margin-top: 0px !important;
   margin-bottom: 0px !important;
 }
