--- a/style/style.css
+++ b/style/style.css
@@ -1,37 +1,89 @@
 html, body, .container-fluid {
     height:100%;
+    margin: 0;
+    font-family: 'Source Code Pro', monospace;
 }
 
+
+
+/*font-family: 'Source Code Pro', monospace;*/
+/*rgb(19, 51, 102) Blue
+  rgb(237, 204, 42) yellow
+  rgb(198, 198, 196) grey
+  rgb(105, 168, 3)  green
+
+
+*/
 .reds{
   border: 1px solid red;
 }
 
+h3.brand{
+  color: white
+}
+
+h6.feed-label{
+  margin-left: 15px;
+  color: white;
+  padding: 5px;
+  background-color: rgba(255,255,255,0.2);
+}
+
+.outside-wrapper{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar{
+  height: 100%;
+  margin: 0;
+}
+
+ div.col-md-1.sidebar.yellow{
+  background-color: rgb(237, 204, 42);
+  width: 5.6%;
+  padding: 0;
+}
+
+.green{
+  background-color: rgb(105, 168, 3);
+}
+
+.navy{
+  background-color: rgb(19, 51, 102);
+}
+
 .slick-next:before, .slick-prev:before{
-  color: red !important;
+  color: white !important;
 }
 img.gif {
     width: 100%;
     height: 100%;
 }
-.carousel-row{
+div.col-md-10.row.carousel-row.navy {
   height: 100%;
-}
-
-.subRedditBtn{
-  padding: 2px 5px;
-  margin: 3px;
-  border: 1px solid blue;
-  font-size: 14px;
-  color: blue;
+  width: 90%;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 .subRedditBtn:hover{
   padding: 2px 5px;
   margin: 3px;
-  border: 1px solid blue;
+  border: 1px solid rgb(19, 51, 102);
+  background-color: white;
+  font-size: 14px;
+  color: rgb(19, 51, 102);
+}
+
+.subRedditBtn{
+  padding: 2px 5px;
+  margin: 3px;
+  border: 1px solid rgb(19, 51, 102);
   font-size: 14px;
   color: white;
-  background-color: blue
+  background-color: rgb(19, 51, 102)
 }
 
 .article-box>img{
@@ -41,19 +93,23 @@ img.gif {
 .pic{
   height: 100%;
   width: 100%;
+  border: 1px solid black;
 }
 
+.thumb-box.post{
+  padding-right: 5px;
+}
 .slick-initialized.slick-slider,
 .slick-list,
 .slick-track{
   height: 100%;
 }
 
-.post-text-container{
+.col-md-5.post-text-container{
   /*position: relative;*/
   height: 100%;
   line-height: 1px;
-  padding: 10px;
+  padding: 10px 5px;
 }
 
 .title-div{
@@ -65,7 +121,11 @@ img.gif {
 }
 
 .loading{
-  border: 1px solid black;
+  color: rgba(0,0,0,0.1);
+  padding: 8%;
+  height: 100%;
+  background-color: white;
+  border-radius: 0px;
 }
 
 .post{
@@ -90,33 +150,51 @@ img.gif {
 
 .list{
   height: 270px;
-  padding: 10px;
+  padding: 3px 10px;
 }
 
-.blue{
+.col-md-12.blue{
   margin-bottom: 40px;
   height: 40%;
-  padding:10px;
+  padding: 10px 0px;
+
 }
 
 .container-fluid.main{
-  padding: 20px;
+  padding: 0px;
   /*background-color: #212121;*/
 }
 
 .slick-dots li.slick-active button:before{
-  /*color: white !important;*/
+  color: white !important;
 }
 
 .slick-slide.slick-active{
-  border: 2px solid black;
+  /*background-image: url('crump.jpg');*/
+  margin: 0px 1px;
+  background-color: white;
   height: 250px;
+  border-radius: 15px;
+  border: 4px solid rgb(19, 51, 102);
+  padding: 15px 0px 0px 0px;
 }
 
 .container.index-container-main{
   max-width: 100%
   height: 100%;
   padding:0px;
+}
+
+input.add-btn{
+  font-size: 14px;
+}
+
+input.subRedditSearch{
+  padding: 5px;
+  margin-right: 10px;
+  width: 150px;
+  border: none;
+  font-size: 12px;
 }
 
 html, body, .container-fluid {
