--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,25 @@ html, body{
   border: 1px solid blue;
 }
 
+.black{
+  border: 0.5px solid;
+  /*background-color: black;*/
+}
+
+/*.slick-slide:nth-child(3n){
+  background-color: black;
+}
+
+.slick-slide:nth-child(2n){
+  background-color: green;
+}
+
+.slick-slide:nth-child(4n){
+  background-color: blue;
+}
+*/
 img.gif {
+    max-height: 450px;
     width: 100%;
     height: 100%;
 }
@@ -28,6 +46,7 @@ img.gif {
 .pic{
   height: 100%;
   width: 100%;
+  max-height: 450px;
   border: 1px solid black;
 }
 
